--- a/Unit 4/Module 2/Color_Casestudy.css
+++ b/Unit 4/Module 2/Color_Casestudy.css
@@ -2,6 +2,10 @@ body {
     background-color: #191ce3;
 }
 
+a {
+    color: #191ce3;
+}
+
 .title {
     color: #7814c4;
     font-size: 20pt;
@@ -14,3 +18,6 @@ h1 {
 p {
     color: #f29e16;
 }
+
+.acc {
+    color: #d6af11
