--- a/Unit 4/Constitution.css
+++ b/Unit 4/Constitution.css
@@ -1,10 +1,10 @@
 body {
-    background-color: #4d784e;
+    background-color: #6EA171;
 }
 
 .wethepeople {
     font-family: cursive;
-    font-size: 30pt;
+    font-size: 20pt;
     text-shadow: 1px 2px 1px pink;
 }
 
