--- a/Unit 4/Constitution.css
+++ b/Unit 4/Constitution.css
@@ -3,7 +3,7 @@ body {
 }
 
 .wethepeople {
-    font-family: cursive;
+    font-style: cursive;
     font-size: 20pt;
     text-shadow: 1px 2px 1px pink;
 }
